[package]
name = "chainchomp"
version = "0.1.2"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Tinyest Opinionated parser combinator library for Rust."
license = "MIT"
repository = "https://github.com/zahash/chainchomp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
